# csnake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  snake.cpp
.github/: copilot-instructions.md
.github/agents/: expert-cpp-software-engineer.agent.md
.github/instructions/: documentation.instructions.md
